# ComfyUI-SoulX-Singer

./: .gitignore  README.md  __init__.py  pyproject.toml  requirements.txt
SoulX-Singer/preprocess/: pipeline.py
SoulX-Singer/preprocess/tools/: lyric_transcription.py  midi_parser.py
SoulX-Singer/soulxsinger/models/modules/: llama.py
SoulX-Singer/soulxsinger/utils/: data_processor.py
example_workflow/: soulx-singer_example_workflow.json
nodes/: model_loader.py  simple_synthesizer.py
