[project]
name = "Comfyui-SoulX-Singer"
description = "ComfyUI custom nodes for SoulX-Singer - Zero-Shot Singing Voice Synthesis"
version = "0.6.0"
license = {file = "LICENSE"}
authors = [
    { name = "SoulX-Singer Team" }
]

dependencies = [
    "torch>=2.0.0",
    "soundfile>=0.12.0",
    "librosa>=0.10.0",
    "numpy<2.0.0",
    "omegaconf>=2.3.0",
    "huggingface_hub>=0.20.0",
    "safetensors>=0.4.0",
]

[project.optional-dependencies]
preprocessing = [
    "accelerate>=1.11.0",
    "beartype>=0.22.9",
    "einops>=0.8.0",
    "funasr>=1.3.0",
    "g2p_en>=2.1.0",
    "g2pM>=0.1.2",
    "gradio>=6.0.0",
    "loralib>=0.1.0",
    "matplotlib>=3.10.0",
    "mido>=1.3.0",
    "ml_collections>=1.1.0",
    "nemo_toolkit>=2.6.0",
    "nltk>=3.9.0",
    "numba>=0.60.0",
    "packaging>=24.0",
    "praat-parselmouth>=0.4.0",
    "pretty_midi>=0.2.0",
    "pyloudnorm>=0.2.0",
    "pyworld>=0.3.0",
    "rotary_embedding_torch>=0.8.0",
    "scikit_learn>=1.7.0",
    "scipy>=1.15.0",
    "scikit_image>=0.25.0",
    "ToJyutping>=3.2.0",
    "torchcodec>=0.10.0",
    "tqdm>=4.67.0",
    "transformers>=4.41.0",
    "webrtcvad>=2.0.0",
]


[project.urls]
Repository = "https://github.com/Soul-AILab/SoulX-Singer"
Documentation = "https://github.com/Soul-AILab/ComfyUI-SoulX-Singer#readme"
Homepage = "https://soul-ailab.github.io/soulx-singer/"
Model = "https://huggingface.co/drbaph/SoulX-Singer"

[tool.comfy]
PublisherId = "Saganaki22"
DisplayName = "SoulX-Singer"
Icon = "https://avatars.githubusercontent.com/u/84208527"

